# gst-plugins-studio

./: .gitignore  Dockerfile  Readme.md  entrypoint.sh  meson.build  meson_options.txt
.github/workflows/: test.yml
debian/: README.Debian  README.source  changelog  control  copyright  gstreamer-1.0-plugins-studio.cron.d.ex  gstreamer-1.0-plugins-studio.doc-base.ex  gstreamer1.0-plugins-studio.cron.d.ex  gstreamer1.0-plugins-studio.doc-base.ex  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  shlibs.local.ex  watch.ex
docs/cameragl/: dewarp.md
examples/: example.c  meson.build  stiching.cpp
examples/webapp/: README.md  index.html  main.js
scripts/: common.sh  create_bin.sh  create_meta.sh  create_plugin.sh
src/: meson.build
src/cameragl/: gstcameragl.c  gstdewarp.c  gstdewarp.h
src/engine/: gstappsrcenginebin.c  gstappsrcenginebin.h  gstengine.c  gstenginebin.c  gstenginebin.h  gstenginebinbase.c  gstenginebinbase.h  gstenginebinbase_private.h  gsth264appsrcenginebin.c  gsth264appsrcenginebin.h  gsttestsourcenginebin.c  gsttestsourcenginebin.h
src/preview/: gstpreview.c  gstpreviewsink.c  gstpreviewsink.h  gstwebrtcsink.c  gstwebrtcsink.h
src/publish/: gstdynamictee.c  gstdynamictee.h  gstproxybin.c  gstproxybin.h  gstpublish.c  gstpublishbin.c  gstpublishbin.h  gstrecordsink.c  gstrecordsink.h  gststreamsink.c  gststreamsink.h
tests/: meson.build
tests/cameragl/: dewarp.c
tests/publish/: recordsink.c  streamsink.c
tools/cameragl/dewarp/: calibration.py  undistort.py
